--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
       <div class="box">
         <h2>Wedding Venue</h2>
-        <p>swambar marraige hall, balua bajar ,motihari Bihar</p>
+        <p>swaembar marraige hall, balua bajar ,motihari Bihar</p>
         <a href="https://www.google.com/maps/place/New+Pawan+Electric+Works/@26.6424135,84.9034272,3a,75y,287.96h,88.78t/data=!3m7!1e1!3m5!1snRtF_HAiebiNjNPfbY-OsA!2e0!6shttps:%2F%2Fstreetviewpixels-pa.googleapis.com%2Fv1%2Fthumbnail%3Fcb_client%3Dmaps_sv.tactile%26w%3D900%26h%3D600%26pitch%3D1.215242357904586%26panoid%3DnRtF_HAiebiNjNPfbY-OsA%26yaw%3D287.95835238868597!7i13312!8i6656!4m14!1m7!3m6!1s0x399335181adbc6fb:0x137bcbfd7909b718!2sBalua,+Sabji+Bazar,+Motihari,+Bihar+845401!8m2!3d26.6454234!4d84.9034585!16s%2Fg%2F11k4g5sb4k!3m5!1s0x399334f6c85bbd81:0x161a5003695fd898!8m2!3d26.6426032!4d84.9031627!16s%2Fg%2F11g02gk2_4?entry=ttu&g_ep=EgoyMDI1MTAyOS4yIKXMDSoASAFQAw%3D%3D" target="_blank" class="map-link">📍 View on Google Maps</a>
       </div>
       <div class="box">
@@ -72,3 +72,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
